--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,9 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #F5F5F5;
+  background-image: url("C:\Users\Manish\Desktop\WaterProject\static\bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   margin: 20px;
 }
 
